<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgpio_cpp</name>
  <version>0.2.2</version>
  <description>ROS Package for the lg C GPIO Library</description>
  <maintainer email="hi@jtmorr.is">Joseph Morris</maintainer>
  <license>Unlicense</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
